fix: backend ai-service 数据库表结构合并